Change biblio items.

--- a/Ru/ittmm-template-ru.tex
+++ b/Ru/ittmm-template-ru.tex
@@ -23,7 +23,7 @@
 \email{\url{lyubin.p@gmail.com}, \url{riviera-molto@mail.ru}}
 
 \begin{abstract}
-Краткосрочное прогнозирование потребления электроэнергии является актуальной задачей во многих областях в виду специфичности продукта: нельзя накопить и хранить энергию впрок. Во-первых, предприятиям-участникам оптового рынка электроэнергии необходимо заранее подавать заявки с плановым потреблением, а энергогенерирующим предприятиям необходимо планировать мощности. Во-вторых, подобный показатель может использоваться при построение других моделей, как например в работе \cite{Kryanev}. При этом потребление электрической энергии каким-либо объектом (цехом, промышленным предприятием, энергообъединением и т.п.) является временным рядом, так как представляет собой мгновенные значения потребляемой мощности замеренные в различные моменты времени с определенной периодичностью. В данной работе продемонстрирован простой и эффективный метод краткосрочного прогнозирования электропотребления. Метод основывается на ансамблировании базовых моделей (RPART - Recursive PARTitioning, CTREE - Conditional Inference Trees) и имеет хороший уровень прогнозирования, который сопоставим с более сложными в использовании алгоритмами. Ансамблирование представляет собой алгоритм комбинации набора обученных моделей с целью повышения точности прогноза, при этом стараясь избежать переобучения. Существует несколько методов ансамблирования, которые имеют свои недостатки и преимущества. В данной работе мы использовали метод бэггинга (Bagging = Bootstrap aggregating), который помог улучшить прогностическую силу отдельных базовых моделей.
+Краткосрочное прогнозирование потребления электроэнергии является актуальной задачей во многих областях в виду специфичности продукта: нельзя накопить и хранить энергию впрок. Во-первых, предприятиям-участникам оптового рынка электроэнергии необходимо заранее подавать заявки с плановым потреблением, а энергогенерирующим предприятиям необходимо планировать мощности. Во-вторых, подобный показатель может использоваться при построение других моделей в качестве признака. При этом потребление электрической энергии каким-либо объектом (цехом, промышленным предприятием, энергообъединением и т.п.) является временным рядом, так как представляет собой мгновенные значения потребляемой мощности замеренные в различные моменты времени с определенной периодичностью. В данной работе продемонстрирован простой и эффективный метод краткосрочного прогнозирования электропотребления. Метод основывается на ансамблировании базовых моделей (RPART - Recursive PARTitioning, CTREE - Conditional Inference Trees) и имеет хороший уровень прогнозирования, который сопоставим с более сложными в использовании алгоритмами. Ансамблирование представляет собой алгоритм комбинации набора обученных моделей с целью повышения точности прогноза, при этом стараясь избежать переобучения. Существует несколько методов ансамблирования, которые имеют свои недостатки и преимущества. В данной работе мы использовали метод бэггинга (Bagging = Bootstrap aggregating), который помог улучшить прогностическую силу отдельных базовых моделей.
 \end{abstract}
 
 \keywords{краткосрочное прогнозирование, ансамблирование, RPART, CTREE, случайные деревья, электропотребление, бэггинг}
@@ -102,21 +102,17 @@ Place here short abstract in English (between 150 and 250 words).
 
 \begin{thebibliography}{99}
 
-\bibitem{Tihonov2006}
-Э.~Е. Тихонов, Методы прогнозирования в условиях рынка: учебное пособие. – Невинномысск, 2006. – 211 с.
+\bibitem{Shetinin}
+Е.~Ю. Щетинин, Эффективные компьютерные алгоритмы моделирования спотовых цен на электроэнергию. - Научное обозрение, 2016. №22, 237-242 с.
 
-\bibitem{VoroncovLectures}
-К.~В. Воронцов, Лекции по алгоритмическим композициям. Презентация: \href{http://www.machinelearning.ru/wiki/images/0/0d/Voron-ML-Compositions.pdf}
-  {\path{http://www.machinelearning.ru/wiki/images/0/0d/Voron-ML-Compositions.pdf}}.
+\bibitem{ShetininKaplunovMarkov}
+Е.~Ю. Щетинин, С.~В. Каплунов, П.~Н. Марков, Моделирование спотовых цен на электроэнергию с использованием марковских процессов переключения режимов. - Вестник РУДН, Серия Математика. Информатика. Физика, 2012, №3, 61-68 с.
 
 \bibitem{ShetininLyubin}
 Е.~Ю. Щетинин, П.~Г. Любин, Робастный алгоритм построения сглаживающих сплайнов. - Научное Обозрение, 2015. №1, 86–94 с.
 
 \bibitem{LyubinShetinin}
 П.~Г. Любин, Е.~Ю. Щетинин, Стохастические модели сглаживания и прогнозирования коэффициентов смертности. - Научное Обозрение, 2015, №18, 147–155 с.
-
-\bibitem{Kryanev}
-И.~И. Иванов, А.~В. Крянев, Е.~С. Осетров, Прогнозирование суточного потребления электроэнергии в московском регионе с использованием искусственных нейронных сетей. - Письма в ЭЧАЯ, 2017, Т.14, №4(209), 418–432 с.
 
 \bibitem{Breiman}
 L. Breiman, J.~H. Friedman, R.~A. Olshen, C.~J. Stone, Classification and Regression Trees. - Wadsworth, California.
