Add line breaks to abstract

--- a/Ru/ittmm-template-ru.tex
+++ b/Ru/ittmm-template-ru.tex
@@ -23,7 +23,23 @@
 \email{\url{lyubin.p@gmail.com}, \url{riviera-molto@mail.ru}}
 
 \begin{abstract}
-Краткосрочное прогнозирование потребления электроэнергии является актуальной задачей во многих областях в виду специфичности продукта: нельзя накопить и хранить энергию впрок. Во-первых, предприятиям-участникам оптового рынка электроэнергии необходимо заранее подавать заявки с плановым потреблением, а энергогенерирующим предприятиям необходимо планировать мощности. Во-вторых, подобный показатель может использоваться при построение других моделей в качестве признака. При этом потребление электрической энергии каким-либо объектом (цехом, промышленным предприятием, энергообъединением и т.п.) является временным рядом, так как представляет собой мгновенные значения потребляемой мощности замеренные в различные моменты времени с определенной периодичностью. В данной работе продемонстрирован простой и эффективный метод краткосрочного прогнозирования электропотребления. Метод основывается на ансамблировании базовых моделей (RPART - Recursive PARTitioning, CTREE - Conditional Inference Trees) и имеет хороший уровень прогнозирования, который сопоставим с более сложными в использовании алгоритмами. Ансамблирование представляет собой алгоритм комбинации набора обученных моделей с целью повышения точности прогноза, при этом стараясь избежать переобучения. Существует несколько методов ансамблирования, которые имеют свои недостатки и преимущества. В данной работе мы использовали метод бэггинга (Bagging = Bootstrap aggregating), который помог улучшить прогностическую силу отдельных базовых моделей.
+Краткосрочное прогнозирование потребления электроэнергии является актуальной задачей 
+во многих областях в виду специфичности продукта: нельзя накопить и хранить энергию впрок. 
+Во-первых, предприятиям-участникам оптового рынка электроэнергии необходимо заранее 
+подавать заявки с плановым потреблением, а энергогенерирующим предприятиям необходимо 
+планировать мощности. Во-вторых, подобный показатель может использоваться при построение 
+других моделей в качестве признака. При этом потребление электрической энергии каким-либо 
+объектом (цехом, промышленным предприятием, энергообъединением и т.п.) является временным 
+рядом, так как представляет собой мгновенные значения потребляемой мощности замеренные 
+в различные моменты времени с определенной периодичностью. В данной работе продемонстрирован 
+простой и эффективный метод краткосрочного прогнозирования электропотребления. Метод основывается 
+на ансамблировании базовых моделей (RPART - Recursive PARTitioning, CTREE - Conditional Inference 
+Trees) и имеет хороший уровень прогнозирования, который сопоставим с более сложными в использовании 
+алгоритмами. Ансамблирование представляет собой алгоритм комбинации набора обученных моделей 
+с целью повышения точности прогноза, при этом стараясь избежать переобучения. Существует 
+несколько методов ансамблирования, которые имеют свои недостатки и преимущества. В данной работе 
+мы использовали метод бэггинга (Bagging = Bootstrap aggregating), который помог улучшить 
+прогностическую силу отдельных базовых моделей.
 \end{abstract}
 
 \keywords{краткосрочное прогнозирование, ансамблирование, RPART, CTREE, случайные деревья, электропотребление, бэггинг}
