--- a/Ru/ittmm-template-ru.tex
+++ b/Ru/ittmm-template-ru.tex
@@ -23,25 +23,26 @@
 \email{\url{lyubin.p@gmail.com}, \url{riviera-molto@mail.ru}}
 
 \begin{abstract}
-Краткосрочное прогнозирование потребления электроэнергии является актуальной задачей 
-во многих областях в виду специфичности продукта: нельзя накопить и хранить энергию 
-впрок. Во-первых, предприятиям-участникам оптового рынка электроэнергии необходимо 
-заранее подавать заявки с плановым потреблением, а энергогенерирующим предприятиям 
-необходимо планировать мощности. Во-вторых, подобный показатель может использоваться 
-при построение других моделей в качестве признака. При этом потребление электрической 
-энергии каким-либо объектом (цехом, промышленным предприятием, энергообъединением и 
-т.п.) является временным рядом, так как представляет собой мгновенные значения 
-потребляемой мощности замеренные в различные моменты времени с определенной 
-периодичностью. В данной работе продемонстрирован простой и эффективный метод 
-краткосрочного прогнозирования электропотребления. Метод основывается на
-ансамблировании базовых моделей (RPART - Recursive PARTitioning, CTREE - Conditional
-Inference Trees) и имеет хороший уровень прогнозирования, который сопоставим с более
-сложными в использовании алгоритмами. Ансамблирование представляет собой алгоритм
-комбинации набора обученных моделей с целью повышения точности прогноза, при этом
-стараясь избежать переобучения. Существует несколько методов ансамблирования, которые
-имеют свои недостатки и преимущества. В данной работе мы использовали метод бэггинга
-(Bagging = Bootstrap aggregating), который помог улучшить прогностическую силу
-отдельных базовых моделей.
+Краткосрочное прогнозирование потребления электроэнергии является актуальной
+задачей во многих областях в виду специфичности продукта: нельзя накопить и
+хранить энергию впрок. Во-первых, предприятиям-участникам оптового рынка
+электроэнергии необходимо заранее подавать заявки с плановым потреблением, а
+энергогенерирующим предприятиям необходимо планировать мощности. Во-вторых,
+подобный показатель может использоваться при построение других моделей в
+качестве признака. При этом потребление электрической энергии каким-либо
+объектом (цехом, промышленным предприятием, энергообъединением и т.п.) является
+временным рядом, так как представляет собой мгновенные значения потребляемой
+мощности замеренные в различные моменты времени с определенной периодичностью. В
+данной работе продемонстрирован простой и эффективный метод краткосрочного
+прогнозирования электропотребления. Метод основывается на ансамблировании
+базовых моделей (RPART - Recursive PARTitioning, CTREE - Conditional Inference
+Trees) и имеет хороший уровень прогнозирования, который сопоставим с более
+сложными в использовании алгоритмами. Ансамблирование представляет собой
+алгоритм комбинации набора обученных моделей с целью повышения точности
+прогноза, при этом стараясь избежать переобучения. Существует несколько методов
+ансамблирования, которые имеют свои недостатки и преимущества. В данной работе
+мы использовали метод бэггинга (Bagging = Bootstrap aggregating), который помог
+улучшить прогностическую силу отдельных базовых моделей.
 \end{abstract}
 
 \keywords{краткосрочное прогнозирование, ансамблирование, RPART, CTREE, случайные деревья, электропотребление, бэггинг}
@@ -85,9 +86,15 @@ Place here short abstract in English (between 150 and 250 words).
     \item прогнозирование с использованием гибридных сетей
 \end{itemize}
 
-Перечисленные методы могут применяться для прогнозирования электропотребления и обладают присущими им достоинствами и недостатками, подробно описанными в \cite{Tihonov2006}. В современных работах чаще остальных описываются решения данной задачи с применением искусственных нейронных сетей, к недостаткам которых можно отнести сложность настройки и сложность интерпретации. В данной работе мы используем подход, в котором используется ансамбль методов.
+Перечисленные методы могут применяться для прогнозирования электропотребления и
+обладают присущими им достоинствами и недостатками, подробно описанными в
+\cite{Tihonov2006}. В современных работах чаще остальных описываются решения
+данной задачи с применением искусственных нейронных сетей, к недостаткам которых
+можно отнести сложность настройки и сложность интерпретации. В данной работе мы
+используем подход, в котором используется ансамбль методов.
 
-На рисунке ниже изображена динамика почасового потребления электроэнергии в России за 3 недели 2017 года: с 13 июня по 3 июля.
+На рисунке ниже изображена динамика почасового потребления электроэнергии в
+России за 3 недели 2017 года: с 13 июня по 3 июля.
 \begin{figure}
   \centering
   \includegraphics[width=0.8\linewidth]{Ru/train_dataset.jpeg}
@@ -105,8 +112,18 @@ Place here short abstract in English (between 150 and 250 words).
     \item бустинг (Boosting)
     \item бэггинг (Bagging = Bootstrap aggregating)
 \end{itemize}
-В своей работе мы использовали бэггинг, который был предложен Л. Брейманом в 1996
-году [4]. Суть метода заключается в формировании различных обучающих подвыборок случайным выбором с возвращениями - некоторые объекты попадают в подвыборку несколько раз, некоторые ни разу. Базовые алгоритмы, обученные по подвыборкам, объединяются в композицию с помощью простого голосования. Достоинствами бэггинга являются: во-первых, возможность использования различных базовых алгоритмов, ошибки которых могут быть взаимно компенсированы при голосовании; во-вторых, некоторые обучающие подвыборки могут не содержать объекты-выбросы и алгоритм, построенный по этим подвыборкам, может оказаться точнее алгоритма, построенного по полной выборке. В данной работе в качестве базовых алгоритмов используются RPART и CTREE. Результат прогнозирования потребления электроэнергии на одни сутки вперед приведен на рисунке ниже.
+В своей работе мы использовали бэггинг, который был предложен Л. Брейманом в
+1996 году [4]. Суть метода заключается в формировании различных обучающих
+подвыборок случайным выбором с возвращениями - некоторые объекты попадают в
+подвыборку несколько раз, некоторые ни разу. Базовые алгоритмы, обученные по
+подвыборкам, объединяются в композицию с помощью простого голосования.
+Достоинствами бэггинга являются: во-первых, возможность использования различных
+базовых алгоритмов, ошибки которых могут быть взаимно компенсированы при
+голосовании; во-вторых, некоторые обучающие подвыборки могут не содержать
+объекты-выбросы и алгоритм, построенный по этим подвыборкам, может оказаться
+точнее алгоритма, построенного по полной выборке. В данной работе в качестве
+базовых алгоритмов используются RPART и CTREE. Результат прогнозирования
+потребления электроэнергии на одни сутки вперед приведен на рисунке ниже.
 \begin{figure}
   \centering
   \includegraphics[width=0.8\linewidth]{Ru/prediction.jpeg}
@@ -116,24 +133,32 @@ Place here short abstract in English (between 150 and 250 words).
 
 
 \section{Заключение}
-В данной работе продемонстрирован простой и эффективный метод краткосрочного прогнозирования электропотребления, который может использоваться участниками рынка энергии при планировании генерации и при планировании закупок.
+В данной работе продемонстрирован простой и эффективный метод краткосрочного
+прогнозирования электропотребления, который может использоваться участниками
+рынка энергии при планировании генерации и при планировании закупок.
 
 \begin{thebibliography}{99}
 
 \bibitem{Shetinin}
-Е.~Ю. Щетинин, Эффективные компьютерные алгоритмы моделирования спотовых цен на электроэнергию. - Научное обозрение, 2016. №22, 237-242 с.
+Е.~Ю. Щетинин, Эффективные компьютерные алгоритмы моделирования спотовых цен на
+электроэнергию. - Научное обозрение, 2016. №22, 237-242 с.
 
 \bibitem{ShetininKaplunovMarkov}
-Е.~Ю. Щетинин, С.~В. Каплунов, П.~Н. Марков, Моделирование спотовых цен на электроэнергию с использованием марковских процессов переключения режимов. - Вестник РУДН, Серия Математика. Информатика. Физика, 2012, №3, 61-68 с.
+Е.~Ю. Щетинин, С.~В. Каплунов, П.~Н. Марков, Моделирование спотовых цен на
+электроэнергию с использованием марковских процессов переключения режимов. -
+Вестник РУДН, Серия Математика. Информатика. Физика, 2012, №3, 61-68 с.
 
 \bibitem{ShetininLyubin}
-Е.~Ю. Щетинин, П.~Г. Любин, Робастный алгоритм построения сглаживающих сплайнов. - Научное Обозрение, 2015. №1, 86–94 с.
+Е.~Ю. Щетинин, П.~Г. Любин, Робастный алгоритм построения сглаживающих сплайнов.
+- Научное Обозрение, 2015. №1, 86–94 с.
 
 \bibitem{LyubinShetinin}
-П.~Г. Любин, Е.~Ю. Щетинин, Стохастические модели сглаживания и прогнозирования коэффициентов смертности. - Научное Обозрение, 2015, №18, 147–155 с.
+П.~Г. Любин, Е.~Ю. Щетинин, Стохастические модели сглаживания и прогнозирования
+коэффициентов смертности. - Научное Обозрение, 2015, №18, 147–155 с.
 
 \bibitem{Breiman}
-L. Breiman, J.~H. Friedman, R.~A. Olshen, C.~J. Stone, Classification and Regression Trees. - Wadsworth, California.
+L. Breiman, J.~H. Friedman, R.~A. Olshen, C.~J. Stone, Classification and
+Regression Trees. - Wadsworth, California.
 
 \end{thebibliography}
 
