--- a/Ru/ittmm-template-ru.bib
+++ b/Ru/ittmm-template-ru.bib
@@ -1,3 +1,20 @@
+@Article{Breiman1996,
+author="Breiman, Leo",
+title="Bagging Predictors",
+journal="Machine Learning",
+year="1996",
+month="Aug",
+day="01",
+volume="24",
+number="2",
+pages="123--140",
+abstract="Bagging predictors is a method for generating multiple versions of a predictor and using these to get an aggregated predictor. The aggregation averages over the versions when predicting a numerical outcome and does a plurality vote when predicting a class. The multiple versions are formed by making bootstrap replicates of the learning set and using these as new learning sets. Tests on real and simulated data sets using classification and regression trees and subset selection in linear regression show that bagging can give substantial gains in accuracy. The vital element is the instability of the prediction method. If perturbing the learning set can cause significant changes in the predictor constructed, then bagging can improve accuracy.",
+issn="1573-0565",
+doi="10.1023/A:1018054314350",
+url="https://doi.org/10.1023/A:1018054314350"
+}
+
+
 @BOOK{Tihonov2006,
   author = {Тихонов Э.Е.},
   title = {Методы прогнозирования в условиях рынка: учебное пособие},
