--- a/Ru/ittmm-template-ru.tex
+++ b/Ru/ittmm-template-ru.tex
@@ -78,7 +78,7 @@ Short-term forecasting of electricity consumption is an actual task in many
 areas of human activity due to the specificity: consumers and power companies
 can't accumulate energy and can't store energy. At the first, consumers which
 participating in the wholesale electricity market must to submit a plan of
-future consumption, and energy-generating enterprises need to plan output.
+future consumption, and energy-generating companies need to plan the output.
 Secondly, this indicator can be used as one of the features when fitting other
 models. At the same time, the consumption of electrical energy by any object is
 a time series, since it represents the instantaneous values ​​of the consumed
